--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 :root {
     --background: theme('colors.green.50');
     --foreground: theme('colors.gray.950');
-    --midground: theme('colors.gray.500');
+    --midground: theme('colors.gray.400');
     --primary: theme('colors.green.500');
     --secondary: theme('colors.red.600');
 }
@@ -23,5 +23,5 @@
 body {
     color: var(--foreground);
     background: var(--background);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lexend, Helvetica, sans-serif;
 }
