--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,8 @@
     --midground: theme('colors.gray.400');
     --primary: theme('colors.green.500');
     --secondary: theme('colors.red.600');
+    --primary-fg: theme('colors.green.700');
+    --secondary-fg: theme('colors.red.700');
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,6 +19,8 @@
         --midground: theme('colors.stone.600');
 	--primary: theme('colors.green.800');
 	--secondary: theme('colors.red.700');
+	--primary-fg: theme('colors.green.500');
+	--secondary-fg: theme('colors.red.600');
     }
 }
 
